app.css
/* ... */
.header__search-bar-container .search-icon {
    width: var(--icon-size);
    height: var(--icon-size);
    position: absolute;
    left: 1em;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1;
    filter: var(--filter-color-light-gray);
}
.header__search-input {
    /* all: initial; */
    font-size: inherit;
    width: 100%;
    height: 100%;
    padding: 8px;
    padding-left: calc(var(--icon-size) * 2 + var(--padding));
    border: none;
    box-shadow: inset 0 0 0 1px #636363;
    border-radius: 0.5rem;
    background-color: var(--gray-300);
    color: var(--text-light-gray);
    transition: 0.15s;
}
.header__search-input::placeholder {
    color: #b5b5b5;
    font-weight: 300;
}
.header__search-input:hover {
    box-shadow: inset 0 0 0 1px #ccc;
}
.header__search-input:focus {
    outline: none;
    box-shadow: inset 0 0 0 2px #e1e1e1;
}

@media screen and (min-width: 480px) {
    .header__user-profile-container {
        justify-content: end;
        gap: 10px;
        padding: 0 10px;
    }
}

@media screen and (min-width: 480px) {
    .header__shop-badge,
    .header__bell-icon-wrapper {
        height: 2rem;
        display: flex;
        align-items: center;
        border-radius: 8px;
    }
}

.header__bell-icon-wrapper {
    width: 2rem;
    height: 2rem;
}

@media screen and (min-width: 480px) {
    .header__bell-icon-wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 10px;
    }
    .header__bell-icon-wrapper,
    .header__shop-badge {
        background-color: var(--color-translucent-gray);
        transition: background-color 0.15s;
    }
    .header__bell-icon-wrapper:hover,
    .header__shop-badge:hover {
        background-color: #4a4a4a;
    }
}

.header__shop-badge {
    color: var(--text-light-gray);
    padding: 0;
}
@media screen and (min-width: 480px) {
    .header__shop-badge {
        background-color: var(--color-translucent-gray);
        padding: 2px;
    }
}

.header__shop-name {
    display: none;
}
@media screen and (min-width: 480px) {
    .header__shop-name {
        display: initial;
        padding: 5px;
    }
}
.header__shop-icon {
    border-radius: 8px;
    padding: 5px;
    background-color: #36FBA1;
    color: #000000AA;
    width: 2rem;
    height: 2rem;
}
@media screen and (min-width: 480px) {
    .header__shop-icon {
        height: 100%;
        width: auto;
    }
}

.popup-menu {
    position: fixed;
    top: calc(var(--header-height) + .5rem);
    right: 0.5rem;
    box-shadow: 0px 4px 8px 2px #0000000D;
    border: 1px solid #DBDBDB;
    width: 92vw;
    background-color: #fff;
    border-radius: 14px;
    visibility: hidden;
    z-index: 1;
}

.popup-menu--open {
    visibility: visible;
}

.alert-popup__body {
    background: #F1F1F1;
    border-radius: 0.125rem;
    color: #616161;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.store-menu {
}
.store-menu__menu-section {
    padding: 6px;
}
.store-menu__menu-section:not(:first-of-type) {
    border-top: 1px solid #e1e1e1;
}

.store-menu .header__shop-badge,
.store-menu .header__shop-badge:hover {
    background-color: #f1f1f1;
    cursor: default;
}
.store-menu .header__shop-name {
    color: var(--gray-300);
}

.dropdown-menu-item {
    width: 100%;
    color: var(--gray-300);
    font-weight: 400;
    min-height: 2rem;
    padding: 6px;
}
.dropdown-menu-item:hover {
    text-decoration: none;
    background-color: #f3f3f3;
}

@media screen and (min-width: 480px) {
    .popup-menu {
        max-width: 380px;
    }
}

main {
    margin: 5rem auto;
    max-width: 49.75rem;
}

.alert {
    background-color: #1a1a1a;
    padding: 0.75rem 1rem;
    display: flex;
    justify-content: space-between;
    gap: 1rem;
}
.alert .alert__content {
    color: var(--text-light-gray);
}
@media screen and (min-width: 480px) {
    .alert {
        border-radius: 0.5rem;
    }
}

.alert__content {
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
    flex: 1;
    gap: 10px;
}

.alert__close {
    width: 2rem;
    height: 2rem;
}

.setup-guide {
    border: 1px solid #dbdbdb;
    border-radius: 0.5rem;
    padding: 0.5rem;
    background-color: #fff;
}

.setup-guide__body {
    transition: 500ms;
    transition-timing-function: ease-out;
    overflow: hidden;
    max-height: 0;
}
.setup-guide__body--open {
    transition-timing-function: ease-in;
    max-height: 600px;
}

.setup-guide__collapse-btn {
    --size: 2em;
    width: var(--size);
    height: var(--size);
}
.setup-guide__collapse-btn:hover {
    background: #0000000d;
}

.progress-bar-track {
    background-color: #e3e3e3;
    width: 72px;
    height: 4px;
    border-radius: 5px;
    overflow: hidden;
}
.progress-bar-slider {
    background-color: var(--gray-300);
    min-width: 4px;
    width: 0;
    height: 100%;
    transition: width 0.25s;
}

.setup-task {
    display: flex;
    flex-flow: row wrap;
    border-radius: 10px;
    margin-bottom: 1px;
    --setup-task-icon-width: 20px;
    --setup-task-padding: 10px;
    --setup-task-header-height: calc(var(--setup-task-icon-width) + var(--setup-task-padding) * 2);
}
.setup-task--open {
    background-color: #f3f3f3;
}
.setup-task:not(.setup-task--open):hover {
    background-color: rgb(247,247,247);
    cursor: pointer;
}

.setup-task:not(.setup-task--open) .setup-task__right-panel {
    display: none;
}
.setup-task__left-panel {
    width: 100%;
}
@media screen and (min-width: 480px) {
    .setup-task--open .setup-task__left-panel {
        width: 80%;
    }
    .setup-task:not(.setup-task--open) .setup-task__left-panel {
        width: 100%;
    }
    .setup-task--open .setup-task__right-panel {
        width: 20%;
        display: initial;
    }
}

.setup-task__header {
	display: flex;
	align-items: center;
	height: 40px;
	gap: var(--setup-task-padding);
	padding: var(--setup-task-padding);
}
/* ... */

